--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
 .nav-link {
   padding: 2rem;
   display: block;
@@ -5,7 +11,7 @@
   text-decoration: none;
   color: gray;
 }
-#nav {
+#navbar {
   border-top: 4px solid gray;
   border-bottom: 4px solid gray;
   padding: 2rem;
@@ -21,4 +27,28 @@
 .section-header {
   font-size: xx-large;
   text-align: center;
+}
+
+#main-doc {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}
+
+#main-doc > div {
+  width: 60%;
+  height: 100%;
+  overflow-y: auto;
+}
+
+@media (min-width: 1200px) {
+  #main-doc {
+    flex-direction: row;
+  }
+  
+  #navbar{
+    flex: 1;
+    width: 40%;
+  }
 }
